fixed overflow of items v0.0.3

--- a/src/app/components/create-format/create-format.component.css
+++ b/src/app/components/create-format/create-format.component.css
@@ -3,6 +3,9 @@
   background-color: azure;
   border: 1px solid lightgray;
 }
+.view {
+  height: 100%;
+}
 .view-items {
   height: 95%;
   overflow-y: scroll;
